--- a/src/App/Trainer/Trainer.scss
+++ b/src/App/Trainer/Trainer.scss
@@ -2,7 +2,10 @@
 
 .trainer {
   &__text {
-    text-align: justify;
+    background-color: $grey-lighten-4;
+    border: 2px solid $border-color;
+    padding: 0.5rem;
+    text-align: left;
   }
 
   &__char {
