--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,10 @@
-// Materialize color palette
-
 $blue-grey-darken-3: #37474f;
-$blue-grey: #607d8b;
 $grey-lighten-4: #f5f5f5;
 $light-green-accent-2: #b2ff59;
 $red-accent-2: #ff5252;
+$teal-lighten-3: #80cbc4;
+$teal: #009688;
+$yellow-accent-2: #ffff00;
 
 // Theme colors
 
