--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,13 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
-
-$app-bg-color: #b0bec5;
+@import 'styles/variables';
 
 .app {
-  align-items: center;
-  background-color: $app-bg-color;
-  display: flex;
-  font-family: 'JetBrains Mono', monospace;
   height: 100%;
-  justify-content: center;
-  text-align: center;
+  padding: 1rem;
+
+  &__tabs {
+    width: 800px;
+
+    button {
+      width: 50%;
+
+      &:first-child {
+        border-right-width: 1px;
+      }
+
+      &:last-child {
+        border-left-width: 1px;
+      }
+    }
+  }
 }
