--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@import 'styles/variables';
+
 body {
+  background-color: $teal-lighten-3;
+  font-family: 'JetBrains Mono', monospace;
   margin: 0;
 }
 
@@ -14,6 +19,38 @@ body,
 
 p {
   margin: 0;
+}
+
+.mt-1 {
+  margin-top: 0.5rem;
+}
+
+.mt-2 {
+  margin-top: 1rem;
+}
+
+.mt-3 {
+  margin-top: 1.5rem;
+}
+
+.mt-4 {
+  margin-top: 2rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 2rem;
 }
 
 .mr-1 {
